2000-04-11  James Henstridge  <james@daa.com.au>

	* app/Makefile.am: fix makefile for bonobo build.

	* configure.in: fix checks for bonobo.

	* app/menus.c: added entries for the plugin manager.

	* app/Makefile.am (dia_core_files): added plugin manager to files
	list.

	* app/plugin-manager.[ch]: the plugin manager dialog.

	* app/display.c (display_update_menu_state): set the antialiased
	menu entry to the correct value.

2000-04-11  Cyrille Chepelov  <chepelov@calixo.net>

	* objects/custom/custom_object.c: not all renderers like ellipses with
	negative dimensions. This could cause ellipses to disappear when using
	the flip_h and flip_v functions.

	* samples/grafcet.dia: fixed speling and correctness.
	
2000-04-11  James Henstridge  <james@daa.com.au>

	* lib/plug-ins.[ch]: added more accessors for use by a plugins dialog.
	exposed the dia_plugin_load and dia_plugin_unload functions.

	* lib/plug-ins.c (plugin_load): change plugin_load to work on an
	already created PluginInfo structure.

	* app/app_procs.c (app_exit): call dia_pluginrc_write() to write
	the pluginrc file.

	* lib/sheet.c: fix up call to dia_config_filename.

	* lib/plug-ins.[ch]: started writing code for handling a pluginrc
	file.  This would save information such as which plugins not to
	load during startup.

2000-04-09  James Henstridge  <james@daa.com.au>

	* lib/sheet.c: use dia_config_filename to resolve file in ~/.dia.

2000-04-10  Alexander Larsson  <alla@lysator.liu.se>

	* lib/plug-ins.c (dia_register_plugins):
	Don't free the value returned from g_getenv.

2000-04-09  Anders Carlsson  <andersca@gnu.org>

	* app/preferences.h: Add reverse_rubberbanding_intersects preference variable.

	* app/preferences.c (prefs_data): Add reverse_rubberbanding_intersects preference data.

	* app/modify_tool.c (modify_button_release): If rubberbanding is done from 
	right to left, select objects that intersect the rubberbanding rectangle
	instead of selecting objects that are in the rectangle.
